Modify OpenAPI specs
